welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:8: error: not found: value doghouse
doghouse()
^MethodsDogHouse:10: error: not found: value doghouse
doghouse()
^MethodsDogHouse:14: error: not found: value doghouse
doghouse()
^MethodsDogHouse:18: error: not found: value dogouse
dogouse()
^