welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
  for ( ligne <- 1 to 4){
    avance(2)
    gauche()
  }
}

doghouse()
avance(4)
doghouse()
avance(2)
gauche()
avance(4)
doghouse()
avance(2)
gauche()
avance(4)
dogouse()
